--- a/style.css
+++ b/style.css
@@ -24,5 +24,16 @@ DIV {
 	height: 50px;
 }
 
-#
-	
+#FooterLeft {
+	float:left;
+	width:399px;
+	height:50px;
+	border: 1px solid green;
+}
+
+#FooterRight {
+	float:right;
+	width:399px;
+	height:50px;
+	border: 1px solid gray;
+}
