--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ DIV {
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
-	background: url(images/background.png) no-repeat;
+	background: url(images/banner.png) no-repeat;
 	color:red;
 }
 
