--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@ DIV {
 
 #FooterLeft {
 	float:left;
-	width:399px;
+	width:49.5%;
 	height:50px;
 	border: 1px solid green;
 }
 
 #FooterRight {
 	float:right;
-	width:399px;
+	width:49.5%;
 	height:50px;
 	border: 1px solid gray;
 }
